fixed date conversions for usage statistics